# AutoQAKD

./: .pre-commit-config.yaml  README.md  pyproject.toml
autoqakd/: __init__.py  core.py  models.py  training.py  utils.py
